--- a/index.html
+++ b/index.html
@@ -59,9 +59,30 @@
                 </div>
             </section>
 
+            <hr class="divider">
+
             <!-- Mapa Interativo dos Abrigos -->
-            <section class="secao-mapa">
-                <div id="mapa-abrigos" style="width: 100%; height: 350px; border-radius: 12px; margin: 2rem 0;"></div>
+            <section class="secao-destacada-mapa-contato">
+                <div class="container-mapa-contato">
+                    <h2 class="titulo-abrigo-proximo">
+                        Veja o abrigo mais próximo:
+                    </h2>
+                    <div class="mapa-container-estilizado">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.456789012!2d-46.6023456!3d-23.5645678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f123456789%3A0xabcdefabcdef5678!2sRua%20das%20Flores%2C%20567%20-%20Vila%20Mariana%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1620000000000!5m2!1spt-BR!2sbr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <p class="frase-destaque-mapa"><i class="fas fa-map-marker-alt"></i> “Ajuda perto de você, a qualquer hora.”</p>
+                    <div class="bloco-contato-titulo">Contato</div>
+                    <div class="cards-contato-estilizados">
+                        <div class="card-contato-item-estilizado">
+                            <i class="fas fa-envelope"></i>
+                            <span>vilamariana@abrigoja.org</span>
+                        </div>
+                        <div class="card-contato-item-estilizado">
+                            <i class="fab fa-whatsapp"></i>
+                            <span>(11) 91234-5678</span>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="secao-info">
